# gpu-benchlab

./: CMakeLists.txt  README.md  build.sh
src/: run_benchmarks_cuda.cpp  run_benchmarks_hip.cpp
src/benchmarks/bandwidth/: bandwidth_cuda.cu  bandwidth_hip.cpp
src/benchmarks/conv1d/: conv1d_cuda.cu  conv1d_hip.cpp
src/benchmarks/matmul/: matmul_cuda.cu  matmul_hip.cpp
src/benchmarks/reduction/: reduction_cuda.cu  reduction_hip.cpp
src/benchmarks/vector_add/: vector_add_cuda.cu  vector_add_hip.cpp
